import changes from zhu

--- a/bigbluebutton-html5/client/main.html
+++ b/bigbluebutton-html5/client/main.html
@@ -10,7 +10,7 @@
     }
 
     body {
-      position: absolute;
+      position: fixed;
       height: 100%;
       font-family: 'Source Sans Pro', Arial, sans-serif;
       font-size: 1rem; /* 16px */
